working on delete and CSRF

--- a/templates/addeditCategories.html
+++ b/templates/addeditCategories.html
@@ -18,4 +18,5 @@
 			<div class="col-xs-5"></div>
 		</div>
 	</div>
+	<input type="hidden" value="{{generate_state()}}" id="state" name="state" />
 </form>
