--- a/templates/addeditItems.html
+++ b/templates/addeditItems.html
@@ -29,4 +29,5 @@
 		<div class="col-md-5"></div>
 	</div>
 </div>
+<input type="hidden" value="{{generate_state()}}" id="state" name="state" />
 </form>
