--- a/templates/addeditShelter.html
+++ b/templates/addeditShelter.html
@@ -22,4 +22,5 @@
 		</div>
 		<div class="col-xs-5"></div>
 	</div>
+	<input type="hidden" value="{{generate_state()}}" id="state" name="state" />
 </form>
