--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -106,26 +106,24 @@ i.large-icon {
     height: 250px;
 }
 
-.container.items-container, .container.cat-container,
-.container.users-container, .container.alert-container{
+.container.items-container, .container.cat-container, .container.users-container, .container.alert-container {
     padding-top: 60px;
 }
-.container.view-item
-{
+
+.container.view-item {
     padding-top: 80px;
 }
-.container.login-container,
-.container.login-form-container,
-.container.item-form
-{
+
+.container.login-container, .container.login-form-container, .container.item-form, .container.error-container {
     padding-top: 100px;
     padding-bottom: 50px;
-    height:100%;
+    height: 100%;
 }
 
-.container.alert-container{
+.container.alert-container {
     z-index: 100;
 }
+
 .catalog-item {
     min-height: 300px;
     padding: 10px;
@@ -142,6 +140,49 @@ i.large-icon {
 .catalog-item:hover {
     background-color: #eee;
     box-shadow: 2px 2px 5px 1px #666;
+}
+
+.login-row .login-item {
+    min-height: 300px;
+    padding: 10px;
+    width: -webkit-calc(25% - 1%);
+    width: calc(25% - 1%);
+    border: 1px solid #ddd;
+    margin: 2px;
+    -webkit-transition: all .4s ease;
+    transition: all .4s ease;
+    text-align: center;
+}
+
+.login-row .login-item:hover {
+    background-color: #eee;
+    box-shadow: 2px 2px 5px 1px #666;
+}
+
+.login-row .login-item .img-circle {
+    border: 1px solid #ddd;
+    width: 140px;
+    height: 140px;
+    color: #fff;
+    padding: 25px;
+    background-color: #777;
+    margin-left: 60px;
+}
+
+.login-row .login-item .img-circle.google {
+    background-color: #dd4b39;
+}
+
+.login-row .login-item .img-circle.blue {
+    background-color: #337ab7;
+}
+
+.login-row .login-item .img-circle i {
+    font-size: 80px;
+}
+
+.push-down {
+    margin-top: 15px;
 }
 
 
@@ -175,19 +216,14 @@ ul.left-nav-ul.hide-element {
     display: none;
 }
 
-.cat-container .row.cat-row,
-.items-container .row.item-row,
-.container.item-form .row,
-.container.users-container .row.user-row {
+.cat-container .row.cat-row, .items-container .row.item-row, .container.item-form .row, .container.users-container .row.user-row {
     z-index: auto;
     padding: 10px;
     -webkit-transition: all .4s ease;
     transition: all .4s ease;
 }
 
-.cat-container .row.cat-row:hover, 
-.items-container .row.item-row:hover
-.users-container .row.user-row:hover{
+.cat-container .row.cat-row:hover, .items-container .row.item-row:hover .users-container .row.user-row:hover {
     z-index: 100;
     /* background-color: #eee; */
     box-shadow: 2px 2px 5px 1px #666;
@@ -216,12 +252,12 @@ ul.left-nav-ul.hide-element {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
 }
 
 ul.form-error {
@@ -243,6 +279,7 @@ ul.form-error li {
 .form-label label {
     text-align: right;
 }
+
 .row.disabled {
     background: repeating-linear-gradient( -45deg, #fff, #eee 10px, #ddd 5px, #bbb 5px);
 }
@@ -250,26 +287,56 @@ ul.form-error li {
 .item-price {
     color: #C52F35;
 }
+
 textarea {
     height: 100px;
-    width:100%;
+    width: 100%;
 }
 
 textarea[id='pictureurl'] {
     height: 80px;
 }
+
 input[type='text'], textarea {
     width: 100%;
 }
+
 img.item-pic-large {
     width: 25%;
 }
 
-.list-item-desc{
-    width:100%;
-    max-height:225px;
+.list-item-desc {
+    width: 100%;
+    max-height: 225px;
+    min-height: 100px;
     overflow: auto;
 }
+.nav-end{
+    min-width:50px;
+}
+.user-image img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid transparent;
+}
+.adminuser {
+    width: 40px;
+    height: 40px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    padding-top: 5px;
+    padding-left: 8px;
+}
+
+.adminuser i {
+    font-size: 27px;
+}
+.user-name{
+    padding-top:10px;
+    padding-left:5px;
+}
+
 /* .header-el {
     text-align: center;
     font-weight: bold;
@@ -315,14 +382,7 @@ li.user-name {
     padding-top: 10px;
 }
 
-.user-profile .user-image img {
-    display: inline;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 1px solid transparent;
-    float: right;
-}
+.user-profile
 
 li.user-image {
     padding-right: 10px;
@@ -341,18 +401,7 @@ li.user-image {
 
 
 
-.adminuser {
-    width: 40px;
-    height: 40px;
-    border: 1px solid #fff;
-    border-radius: 50%;
-    padding-top: 5px;
-    padding-left: 8px;
-}
 
-.adminuser i {
-    font-size: 27px;
-}
 
 .row.login-row {
     padding-top: 10px;
