--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -3,6 +3,7 @@
 <form method='post' action="{{url_for('admin_login')}}">
     {{ render_field(form.email) }}
     {{ render_field(form.password) }}
+    {{ form.csrf_token }}
     <div class="row">
         <div class="col-lg-5"></div>
         <div class="col-lg-1">
@@ -13,5 +14,6 @@
         </div>
         <div class="col-lg-5"></div>
     </div>
+    <input type="hidden" value="{{generate_state()}}" id="state" name="state" />
 </form>
 </div>
