--- a/templates/category_item_view.html
+++ b/templates/category_item_view.html
@@ -35,7 +35,7 @@
 				<div class="col-lg-8"></div>
 				{% if  isSomeoneLoggedIn() and  verifyOwnerLogin(category_item.user_id) %}
 					<div class="col-lg-1"><a class='btn btn-primary ' href ='{{url_for("new_item", item_id=category_item.id)}}' ><i class="fa fa-pencil"></i> Edit</a></div>
-					<div class="col-lg-1"><a class='btn btn-danger ' href ='{{url_for("delete_item")}}' ><i class="fa fa-trash-o"></i> Delete</a></div>
+					<div class="col-lg-1"><button class='btn btn-danger ' href ='{{url_for("delete_item")}}' data-toggle="modal" data-target="#confirmDeleteModal"><i class="fa fa-trash-o"></i> Delete</button></div>
 					{%else%}
 					<div class="col-lg-2"></div>
 				{% endif %}
