--- a/templates/error.html
+++ b/templates/error.html
@@ -1,3 +1,6 @@
+<div class="container error-container">
 <div class="row">
-	<div class="col-xs-12"><h3 class="page-error"> {{message}} <i class="fa fa-exclamation"></i></i></h1></div>
+	<div class="col-md-12"><h3 class="page-error"> {{message}} <i class="fa fa-exclamation"></i></i></h1></div>
+</div>
+	
 </div>
