--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,14 +1,19 @@
 <!-- FOOTER -->
 <footer >
-<div class="container">
-	<p class="pull-right"><a href="#">Back to top</a></p>
-	<p>&copy; 2015 Sams Catalog Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-</div>
+	<div class="container">
+		<p class="pull-right"><a href="" id="back-to-top">Back to top</a></p>
+		<p>&copy; 2015 Sams Catalog Inc. &middot; <a href="{{url_for('catalog_xml')}}" target="_blank">Catalog XML Catalog</a> &middot; <a href="{{url_for('catalog_json')}}" target="_blank">Catalog JSON</a> &middot; <a href="{{url_for('recent_items_feed')}}" target="_blank">Latest Items Atom Feed</a> </p>
+	</div>
 </footer>
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+{% if request.path=="/login"%}
+	<!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
+	<script src="//apis.google.com/js/platform.js?onload=start"> </script>
+	<!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
+{% endif %}
 <script>
 	var jqurl= "{{url_for('static' ,filename='js/lib/vendor/jquery.min.js')}}";
 window.jQuery || document.write('<script src="'+ jqurl+'"><\/script>')</script>
