--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,3 @@
-
 <div class="container login-container">
     <div class="row">
     <div class="col-lg-12">
@@ -6,55 +5,69 @@
     </div>
 </div>   
 <div class="row login-row">
-    <div class="col-lg-4">
+    <div class="col-md-3 login-item">
+        <div class="img-circle google" ><i class="fa fa-google-plus"></i></div>
+        <h4 class="push-down">Login With Google Account</h4>
         <!-- GOOGLE PLUS SIGN IN BUTTON-->
-        <div id="signInButton">
+        <p><div id="signInButton">
             <span class="g-signin"
                 data-scope="openid email"
-                data-clientid="593527995169-oeoi7jpkg7n64kbpan86fb6u0fvhc3rr.apps.googleusercontent.com"
+                data-clientid="593527995169-har8ufh16auuvrejcaavd47eg08662h3.apps.googleusercontent.com"
                 data-redirecturi="postmessage"
                 data-accesstype="offline"
                 data-cookiepolicy="single_host_origin"
                 data-callback="signInCallback"
                 data-approvalprompt="force">
-            </span>
+            </span></p>
         </div>
         <!--END GOOGLE PLUS SIGN IN BUTTON --></h4>
     </div>
-    <div class="col-lg-4">
-        facebook
+    <div class="col-md-3 login-item disabled">
+        <div class="img-circle blue" ><i class="fa fa-facebook-square"></i></div>
+        <h4 class="push-down">Login With Facebook Account</h4>
+         <p>Coming Soon!</p>   
+       <p> <a href="" class="btn btn-primary disabled"><i class="fa fa-facebook-square large-icon"></i></i> Facebook</a></p>
     </div>
-    <div class="col-lg-4">
-        <a href="{{url_for('admin_login')}}" class="btn btn-primary "><i class="fa fa-user-secret large-icon"></i> Administrator</a>
+     <div class="col-md-3 login-item">
+        </div>
+    <div class="col-md-3 login-item">
+        <div class="img-circle blue" ><i class="fa fa-user-secret"></i></div>
+        <h4 class="push-down">Login As An Administrator</h4>
+        <p><a href="{{url_for('admin_login')}}" class="btn btn-primary "><i class="fa fa-user-secret large-icon"></i> Administrator</a></p>
+        
     </div>
 </div>
 <div id="result"></div>
 </div>
-<script>
-function signInCallback(authResult) {
-if (authResult['code']) {
-// Hide the sign-in button now that the user is authorized
-$('#signinButton').attr('style', 'display: none');
-// Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
-$.ajax({
-type: 'POST',
-url: '/gconnect?state={{STATE}}',
-processData: false,
-data: authResult['code'],
-contentType: 'application/octet-stream; charset=utf-8',
-success: function(result) {
-// Handle or verify the server response if necessary.
-if (result) {
-$('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
-setTimeout(function() {
-window.location.href = "/shelters";
-}, 4000);
+<script type="text/javascript">
+      function signInCallback(authResult) {
+        console.log("in call back " , authResult)
+        if (authResult['code']) {
+            // Hide the sign-in button now that the user is authorized
+            $('#signinButton').attr('style', 'display: none');
+            // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
+            $.ajax({
+                type: 'POST',
+                url: '/gconnect?state={{STATE}}',
+                processData: false,
+                data: authResult['code'],
+                contentType: 'application/octet-stream; charset=utf-8',
+                success: function(result) {
+                    // Handle or verify the server response if necessary.
+                    if (result) {
+                        $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...')
+                        setTimeout(function() {
+                            window.location.href = "/catalog";
+                        }, 4000);
 
-} else if (authResult['error']) {
-console.log('There was an error: ' + authResult['error']);
-} else {
-$('#result').html('Failed to make a server-side call. Check your configuration and console.');
-}
-}
+                    } else if (authResult['error']) {
+                        console.log('There was an error: ' + authResult['error']);
+                    } else {
+                        $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+                    }
+                }
 
-}); } }</script>
+            });
+        }
+    }
+</script>
